# ai-finance-analyzer

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  后续操作完整指南-v2.md  后续操作完整指南.md
.github/workflows/: ci.yml
examples/: quickstart.py  sample_generic.csv  sample_wechat.csv
src/analyzer/: __init__.py  cli.py  pipeline.py
src/analyzer/advisor/: __init__.py  prompts.py
src/analyzer/classifier/: __init__.py  llm_classifier.py  rules.json  rules_engine.py
src/analyzer/core/: config.py
src/analyzer/engine/: __init__.py  health.py  risks.py  structure.py  trends.py
src/analyzer/models/: schemas.py
src/analyzer/parser/: __init__.py  base.py  csv_generic.py  wechat.py
tests/: test_all.py
